unpackaged/objects/Objective__c.object
<CustomObject>
  <description>This account plan is based on the "OGSM" strategic planning methodology: an OGSM is a written and easily communicated statement of an organization’s Objective, Goals, Strategies and Measures. OGSM brings alignment, transparency of priorities and metrics that define success.</description>
  <fields>
    <fullName>AccountPlan__c</fullName>
    <inlineHelpText>Account planning is the process of mapping out important details about your customer, including information about their decision-making process, the companies you're competing with to close them, and the overall strategy to win them over, retain and grow them.</inlineHelpText>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Account Plan Objectives</relationshipLabel>
    <relationshipName>Account_Plan_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Goals__c</fullName>
    <inlineHelpText>“what must we accomplish financially?”
Goals are numbers that define what success looks like, usually financial and/or operational, it makes the Objective visible in measurable terms.</inlineHelpText>
    <label>Goals</label>
    <length>300</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>IndicatedActions__c</fullName>
    <label>Action Plan</label>
    <length>300</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Initiatives__c</fullName>
    <inlineHelpText>"What are the choices that we have ?"
Strategies are words that provide explanations and descriptions of specific choices that focus an organization’s plans toward accomplishing the desired Objective and Goals</inlineHelpText>
    <label>Strategies &amp; Initiatives</label>
    <length>300</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Measures__c</fullName>
    <inlineHelpText>"Are these Strategies working?"
Measures are numbers that define an organization’s progress toward delivering a Strategy. Each Strategy should have no more than two or three Measures that define whether the Strategy is effective and is having the desired impact. Each Measure is tracked to determine the progress of a Strategy, and used to make decisions regarding any necessary adjustments.</inlineHelpText>
    <label>Measures</label>
    <length>300</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Objective__c</fullName>
    <inlineHelpText>"What are we trying to achieve?"
 The Objective should define the playing field and the rules for winning. An Objective is a constant and meaningful reminder to the organization about what success looks like in the future. An effective Objective statement is not generic; it is a customized, business-specific view of where the business is headed.</inlineHelpText>
    <label>Objective</label>
    <length>300</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>StatusNotes__c</fullName>
    <label>Status Notes</label>
    <length>300</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Open</fullName>
          <color>#FF99FF</color>
          <default>true</default>
          <label>Open</label>
        </value>
        <value>
          <fullName>Green</fullName>
          <color>#78C953</color>
          <label>Green</label>
        </value>
        <value>
          <fullName>Yellow</fullName>
          <color>#F3D904</color>
          <label>Yellow</label>
        </value>
        <value>
          <fullName>Red</fullName>
          <color>#8F6429</color>
          <label>Red</label>
        </value>
        <value>
          <fullName>Achieved</fullName>
          <color>#57F17C</color>
          <label>Achieved</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Account Plan Objective</label>
  <nameField>
    <displayFormat>OB-{000}</displayFormat>
    <label>Objective #</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Account Plan Objectives</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>